src/sass/style.scss
/* ... */
#menu .close-button:hover:after,
#menu .close-button:hover:before,
#menu .close-button:focus:after,
#menu .close-button:focus:before {
	background: $primary-color;
}
#menu .close-button:after {
	transform: rotate(45deg);
}
#menu .close-button:before {
	transform: rotate(-45deg);
}
#menu .nav-wrapper {
	position: absolute;
	width: 100%;
	height: 100%;
	overflow-x: hidden;
	overflow-y: scroll;
	box-sizing: border-box;
}
#menu .nav-label {
	display: block;
	padding: 1.667em 2em;
	margin: 0;
	opacity: 0.5;
	font-size: 0.75em;
	line-height: 2em;
}
#menu ul {
	position: relative;
	width: 100%;
	margin: auto;
	padding: 0;
}
#menu li {
	position: relative;
}
#menu li:before {
	position: absolute;
	width: 100%;
	height: 1px;
	left: 1.5em;
	bottom: 0;
	margin: auto;
	content: '';
	background: rgba(0,0,0,0.1);
}
#menu li:last-child:before {
	display: none;
}
#menu li.active {}
#menu li.active:after {
	position: absolute;
	content: '';
	width: 0.2em;
	height: 100%;
	left: 0;
	top: 0;
	background: $primary-color;
}
#menu li a {
	display: block;
	padding: 1.25em 1.5em;
	color: $color-blue-15;
	white-space: nowrap;
	text-overflow: ellipsis;
	font-weight: 400;
}
#menu li a:hover,
#menu li a:focus {
	color: $color-black;
	background: rgba(0,0,0,0.05);
}
#menu li a svg {
	position: relative;
	top: -1px;
	font-size: 0.8em;
	color: inherit;
}
#menu li.active a {
	color: $color-black;
	font-weight: 500;
}

/* ==========================================================================
   Reading Progress
   ========================================================================== */

.progress-container {
	position: fixed;
	width: 100%;
	height: 4px;
	left: 0;
	top: 0;
	z-index: 1000;
	background: transparent;
	transition: opacity ease-out 1s;
}
.progress-container.ready {
	opacity: 0.2;
}
.progress-bar {
	display: block;
	width: 0;
	height: 1px;
	background: $primary-color;
	box-shadow: 0 0 1px $primary-color, 0 0 3px $primary-color;
}

/* ==========================================================================
   Footer
   ========================================================================== */

#footer {
	position: relative;
	z-index: 20;
	font-family: 'Fira Sans', sans-serif;
	line-height: 1em;
	padding-bottom: 6em;
}

.disclaimer {
	border-bottom: 1px solid $color-gray-90;
	padding: 1em 0;
}

.footer-icons {
	border-bottom: 1px solid $color-gray-90;
	padding: 1em 0;
	text-align: center;
}

.footer-icons h3 {
	text-align: left;
	padding-bottom: .5em;
	margin-top: .5em;
}

.credits {
	text-align: center;
	font-size: 0.625em;
	line-height: 1em;
	padding: 1.1em 0;
	overflow: auto;
	opacity: 0.5;
}
.credits a {
	color: inherit;
}
.credits span {
	display: block;
}
.credits-open-source {
	float: left;
}
.credits-software {
	float: right;
}

/* ==========================================================================
   Index
   ========================================================================== */

#blog-author {
	position: relative;
	z-index: 40;
	margin: auto 6em;
}
#blog-author:after {
	position: absolute;
	width: 32em;
	height: 1px;
	left: 50%;
	bottom: 0;
	margin-left: -16em;
	content: '';
	background: $color-gray-90;
}
#blog-author .post-author {
	margin-top: -5em;
	padding-bottom: 3em;
	border: 0;
}
#blog-author.has-cover .post-author-avatar {
	box-shadow: 0 2px 4px rgba(0,0,0,0.1);
	margin-top: 0.5em;
}
#blog-author.has-cover .post-author-avatar img {
	border: 0.125em solid $color-white;
}
#blog-author .post-author-name {
	padding: 0.334em 0 0;
	font-size: 2em;
	line-height: 1em;
}
#blog-author.has-cover .post-author-name {
	padding: 0.667em 0;
	font-weight: 500;
	letter-spacing: 0.025em;
	line-height: 1.334em;
	color: $color-white;
}
#blog-author.has-cover .post-author-about {
	margin-top: -0.667em;
}


.container {
	position: relative;
}
.container .post {
	padding: 4em 0;
}
.container .post:after {
	position: absolute;
	width: 32em;
	height: 1px;
	left: 50%;
	bottom: 0;
	margin-left: -16em;
	content: '';
	background: $color-gray-90;
}
.container .post.featured .post-title:after {
	position: absolute;
	width: 1em;
	height: 1em;
	left: -1.75em;
	top: 0;
	margin-top: -0.25em;
	font-family: 'icons';
	font-size: 0.5em;
	font-style: normal;
	font-weight: normal;
	content: '\e800';
	color: inherit;
	text-align: center;
	color: $color-gray-90;
}

/* ==========================================================================
   Post
   ========================================================================== */

.post.page-template {
	padding-bottom: 4em;
}
.page-template #footer:after {
	position: absolute;
	width: 32em;
	height: 1px;
	left: 50%;
	top: 0;
	margin-left: -16em;
	content: '';
	background: $color-gray-90;
}

/* ==========================================================================
   Post
   ========================================================================== */

#post-header {
	position: relative;
	padding-top: 6em;
}
#post-header.has-cover {
	padding: 16em 0 2em;
	background: $color-black;
	overflow: hidden;
	text-shadow: 0 1px 2px rgba(0,0,0,0.1);
}
.post-cover {
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	z-index: 5;
	background: no-repeat scroll center center / cover $color-black;
	animation: 0.5s ease-in forwards fadein;
}
.post-cover:after {
	position: absolute;
	width: 100%;
	height: 12em;
	left: 0;
	bottom: 0;
	z-index: 8;
	content: '';
	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%);
}
.post {
	position: relative;
	z-index: 10;
}
.post-title {
	position: relative;
	z-index: 10;
	margin: 0 0 0.25em;
	font-size: 2em;
	line-height: 1em;
	font-weight: 700;
	text-indent: -1px;
	color: $color-black;
}
.has-cover .post-title {
	color: $color-white;
}
.post-title a {
	text-decoration: none;
	color: inherit;
	font-weight: inherit;
}
/* ... */

